--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Question_Mark_Theme","description":"????????","author":"DevilsTheAvenged","version":"1.3"}*//{}
+//META{"name":"Question_Mark_Theme","description":"????????","author":"DevilsTheAvenged","version":"1.4"}*//{}
  /* fix not having a background image anymore */
 .layers-20RVFW, .layer-kosS71, .container-2OU7Cz, .typing-3eiiL_ {
   background: rgba(0,0,0, 0.3) !important;
@@ -487,7 +487,9 @@ a img {
 .themeDefault-3M0dJU.valueChecked-3Bzkbm {
     background-color: #e53b0a;
 }
-.theme-dark .channel-members .member.popout-open {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq,
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, 
+.theme-dark .member-2FrNV0.popout-open:hover .content-3JzEqq {
     background: transparent;
     border: 2px solid #e53b0a;
 }
@@ -539,7 +541,7 @@ a img {
     background: red;
     color: white;
 }
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border-color: #e53b0a !important;
     background: rgba(0,0,0,0.4);
 }
@@ -853,7 +855,7 @@ a {
 .chat .jump-to-present-bar button:last-child:hover {
     color: #e53b0a;
 }
-.channel-members .member .member-activity-icon-foreground {
+.theme-dark .activityIconForeground-1o4t0w {
     fill: white;
 }
 
@@ -1071,7 +1073,7 @@ a {
 .search-popout .date-picker .date-picker-hint .hint {
     color: white;
 }
-.channel-members .member .member-activity strong {
+.activity-1PAe08 strong{
     color: #e53b0a;
 }
 .inner-ptMwR- .channel-3YGMy1 {
@@ -1134,7 +1136,7 @@ a {
     border: 1px solid #e53b0a;
 }
 .theme-dark .themed-popout .header .title,
-.protip.popout-footer .tip {
+.theme-dark .protip-q743VF.popout-footer .tip {
     color: #e53b0a;
 }
 .theme-dark .themed-popout .header {
@@ -1883,7 +1885,7 @@ a {
     color: white;
     border: none;
 }
-.protip {
+.theme-dark .protip-q743VF {
    display: none;
 }
 .assetsGameIcon-14Ewum {
