--- a/WindowsTheme.theme.css
+++ b/WindowsTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"WindowsTheme","description":"FreshWindowsTheme","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"WindowsTheme","description":"FreshWindowsTheme","author":"DevilsTheAvenged","version":"2"}*//{}
 /* Backgrounds */
 .app,
 .callout-backdrop,#pubs-container:before,.bda-backdrop {
@@ -218,7 +218,7 @@
 .theme-dark .inner-3if5cm {
     background-color: black;
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: transparent;
 }
 .horizontal-2BEEBe>.flexChild-1KGW5q:last-child {
