--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Winter","description":"Enjoy the 'Cool' Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"Winter","description":"Enjoy the 'Cool' Theme","author":"DevilsTheAvenged","version":"2"}*//{}
 
 .app,.bda-backdrop,#pubs-container:before {
 	background-image: url("https://wallpapercave.com/wp/aHXgonf.jpg") !important;
@@ -149,7 +149,7 @@
     margin-bottom: .79em;
     border: 1px solid #FFFFFF;
  }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,#3d85f0 15%,#0b3e89);
 }
 .theme-dark .headerNormal-3Vn9nT {
