--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Yoshi_Theme","description":"The Great Yoshi Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"Yoshi_Theme","description":"The Great Yoshi Theme","author":"DevilsTheAvenged","version":"2"}*//{}
 @import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/SomeUnImportantStuff/ThemeFixerv2.theme.css);
 .app,
 .callout-backdrop,
@@ -381,10 +381,10 @@
     height: 140px;
     width: 140px;
 }
-.protip .label {
+.theme-dark .protip-q743VF .label {
     color: white;
 }
-.protip {
+.theme-dark .protip-q743VF {
     color: #F67C1E;
 }
 /* Emote Settings */
@@ -851,7 +851,7 @@
     border-width: 3px;
     border-style: dashed;
 }
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border-color: #F67C1E;
     color: white;
     border-width: 3px;
@@ -1109,7 +1109,7 @@ color: white !important;
     background: #53A13C;
     border: 2px solid #ED1910;
  }
- .theme-dark .themed-popout .header .title,.theme-dark .messages-popout-wrap .messages-popout .empty-placeholder .body,.protip.popout-footer .tip {
+ .theme-dark .themed-popout .header .title,.theme-dark .messages-popout-wrap .messages-popout .empty-placeholder .body,.theme-dark .protip-q743VF.popout-footer .tip {
     color: white;
     opacity: 1;
 }
@@ -1513,7 +1513,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     height: 13px!important;
     border-radius: 50%;
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,black 85%,#53A833);
 }
 .option-popout .btn-item {
@@ -1902,7 +1902,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .theme-dark .topic-1KFf6J,.channel-members .member .member-activity-text,.theme-dark .channelName-1G03vu, .theme-dark .groupDM-3gzbyG .channelName-1G03vu, .theme-dark .groupDMManaged-2z2S1A .channelName-1G03vu,.channelIcon-1KtcMW,.name-3gtcmp {
     color: white;
 }
-.channel-members .member .member-activity-icon-foreground {
+.theme-dark .activityIconForeground-1o4t0w {
     fill: white;
 }
 /* Code Block Codes */
@@ -2094,7 +2094,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .theme-dark .message-group .comment .edited {
     color: rgba(255, 255, 255, 0.6);
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,black 85%,#53A833);
 }
 /* Popup Menu */
