--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Yumeko","description":"Who wants to play some Poker because I know I want to","author":"DevilsTheAvenged","version":"1.9"}*//{}
+//META{"name":"Yumeko","description":"Who wants to play some Poker because I know I want to","author":"DevilsTheAvenged","version":"2"}*//{}
   
 .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece {
     background-color: transparent;
@@ -354,7 +354,7 @@
     font-size: 14px;
     font-weight: bold;
 }
-.channel-members .member .member-activity-text {
+.activityText-258pdj{
     color: #cc1111;
     font-style: italic;
     font-weight: bold;
@@ -1269,7 +1269,7 @@ color: #c11;
     background-color: #2f3136;
     border-color: #2c2e33;
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,black 85%,red);
 }
 .dropdown-button path[stroke] {
@@ -1689,7 +1689,7 @@ background: red;
     fill: red;
 }
 
-.theme-dark .input-2YozMi:focus {
+.theme-dark .input-2YozMi:focus, .theme-dark .input-2YozMi.focused-xL_GX6 {
     border-color: #c11;
 }
 
@@ -1874,7 +1874,7 @@ background: red;
 .theme-dark .message-group .comment .edited {
     color: rgba(255, 255, 255, 0.6);
 }
-.theme-dark .channel-members .member.popout-open, .theme-dark .channel-members .member:hover {
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
     background: linear-gradient(90deg,black 85%,#CC1111);
 }
 /* Popup Menu */
