--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"BrownMaterial_Theme","description":"Clean Brown Material Theme","author":"DevilsTheAvenged","version":"1.1"}*//{}
+//META{"name":"BrownMaterial_Theme","description":"Clean Brown Material Theme","author":"DevilsTheAvenged","version":"1.2"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200');
 *:not(code) {
     font-family: 'Montserrat' !important;
@@ -57,7 +57,7 @@
 .header-1tSljs,
 .theme-dark .friends-table,
 .theme-dark .messages-wrapper,
-.theme-dark .channel-members,
+.theme-dark .members-1bid1J,
 .theme-dark .typing-3eiiL_,
 .theme-dark .chat form,
 .scroller-NXV0-d,
@@ -546,8 +546,8 @@
 [class*="iconInactive-WWHQEI icon-mr9wAc popout-open iconMargin-2Js7V9"][name*="Pin"] {
        background-image: url(https://png.icons8.com/material/24/cccccc/pin.png);
 }
-.theme-dark .messages-popout-wrap .messages-popout .message-group {
-    background-color: black;
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+    background-color: black !important;
     border-color: transparent;
 }
 [class*="iconInactive-WWHQEI icon-mr9wAc iconMargin-2Js7V9"][name*="PersonPlus"] {
@@ -913,8 +913,8 @@ a,
     border-color: transparent;
 }
 /* Search, Mention, Pins and such */
-.theme-dark .themed-popout .header {
-    background-color: #18191c;
+.theme-dark .popout .messages-popout-wrap .header {
+    background-color: #18191c !important;
     box-shadow: none;
 }
 .theme-dark .search-results-wrap .search-result:before,
@@ -946,8 +946,8 @@ a,
     border-top: 2px solid black;
 }
 
-.theme-dark .themed-popout {
-    background-color: #232428;
+.theme-dark .popout .messages-popout-wrap {
+    background-color: #232428 !important;
     border: none;
     box-shadow: none;
 }
@@ -955,17 +955,17 @@ a,
     background: #1d1f23;
     box-shadow: none;
 }
-.theme-dark .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
-    background-color: transparent;
-    box-shadow: none;
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+    background: none !important;
+    box-shadow: none !important;
 }
 .theme-dark .themed-popout .header .subtitle, 
 .theme-dark .themed-popout .text {
     color: white;
 }
-.theme-dark .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button,
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button,
 .theme-dark .search-results-wrap .action-buttons .jump-button {
-    background-color: #5D4037;
+    background-color: #5D4037 !important;
     color: white;
 }
 .theme-dark .searchAnswer-yD90ey, 
@@ -1476,7 +1476,7 @@ a,
 .theme-light .scrollerThemed-19vinI.themeDark-BdSAwu.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track {
     background-color: transparent;
 }
-.theme-dark .themed-popout .footer,
+.theme-dark .popout .messages-popout-wrap .footer,
 .theme-dark .private-channel-recipients-invite .friend {
     background-color: #18191c;
 }
