--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"ChocolaTheme","description":"Just an average Chocola Theme","author":"DevilsTheAvenged","version":"2"}*//{}
+//META{"name":"ChocolaTheme","description":"Just an average Chocola Theme","author":"DevilsTheAvenged","version":"2.1"}*//{}
 .app,
 .callout-backdrop,
 .bda-backdrop,
@@ -403,7 +403,7 @@ form,
 	background-color: rgb(86, 67, 75) !important;
 }
 
-.theme-dark .channel-members {
+.theme-dark .members-1bid1J {
 	background-color: rgba(86, 67, 75, 0.85) !important;
 }
 
@@ -430,7 +430,7 @@ form,
 }
 
 .message-group:not(.compact) .avatar-large[style*="235302947058089984"]~ .comment .message h2 span.username-wrapper::after,
-.channel-members .member .avatar-small[style="235302947058089984"]~ .member-inner .member-username .member-username-inner::after {
+.members-1bid1J .member .avatar-small[style="235302947058089984"]~ .member-inner .member-username .member-username-inner::after {
 	content: "Chocolate Lover";
 	color: #fff;
 	border-radius: 3px;
@@ -616,11 +616,32 @@ form,
 .guilds-wrapper .guilds .guild.selected:before {
 	background: transparent;
 }
-.theme-dark .messages-popout-wrap .messages-popout .message-group {
-    background-color: #634545;
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+    background-color: #634545 !important;
 }
-.theme-dark .themed-popout .header {
-    background-color: #634545;
+.theme-dark .search-results-wrap .action-buttons .jump-button,
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button,
+.theme-dark .search-results-wrap {
+    background-color: #3a2929;
+    color: white;
+}
+.theme-dark .search-results-wrap .search-result:before,
+.theme-dark .search-results-wrap .search-result:after {
+    background: none;
+}
+.theme-dark .search-results-wrap .channel-separator:before {
+    border-color: transparent;
+}
+.theme-dark .search-results-wrap .channel-separator .channel-name {
+    background-color: black;
+    color: #fff;
+}
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+    background: none;
+    box-shadow: none;
+}
+.theme-dark .popout .messages-popout-wrap .header {
+    background-color: #634545 !important;
     box-shadow: none;
 }
 .avatar-xxlarge {
@@ -1272,7 +1293,8 @@ form,
     border-radius: 5px;
     color: white;
 }
-.slider-handle, .slider-handle span {
+.slider-handle, .slider-handle span,
+.checkbox .checkbox-inner input[type=checkbox]:checked+span {
     background-color: #644f55;
 }
 
@@ -1329,13 +1351,11 @@ form,
 .wanderingCubesItem-35kyMu {
     background-color: #81656d;
 }
-.theme-dark .themed-popout {
-    
+.theme-dark .popout .messages-popout-wrap {
     background-color: #644f55 !important;
     border: 3px solid rgba(255,255,255,.6);
-    
 }
-.theme-dark .messages-popout-wrap .messages-popout .message-group:hover {
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover {
     border-color: rgba(28,36,43,.8);
 }
 .footer-1PYmcw, .header-3sp3cE {
@@ -1363,12 +1383,6 @@ form,
 }
 ::-webkit-scrollbar {
   display: none;
-}
-.channel-members-loading .heading, .channel-members-loading .member,.theme-dark .channel-members-loading .background {
-   display: none;
-}
-.theme-dark .channel-members-loading {
-    background-color: rgba(255,0,0,0.15);
 }
 
 .theme-dark .autocomplete-1TnWNR {
@@ -1438,7 +1452,7 @@ form,
 .activityText-258pdj{
     color: white;
 }
-.theme-dark .channel-members h2 {
+.theme-dark .membersGroup-3_dP5E {
     color: rgba(255, 255, 255, 1);
 }
 
@@ -1450,7 +1464,7 @@ form,
     font-size: 16px;
     padding: 5px 5px;
 }
-.channel-members .bot-tag {
+.members-1bid1J .bot-tag {
     height: 14px;
     line-height: 15px;
     padding: 2px 4px;
@@ -1564,15 +1578,17 @@ form,
     border-bottom: none !important;
 }
 /* Avatar Size Change(Some of them) and Status Change */
-.channel-members .avatar-small {
+.members-1bid1J .avatar-small {
     width: 40px;
     height: 40px;
     background-size: cover;
 }
-.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, .theme-dark .member-2FrNV0.popout-open:hover, .theme-dark .member-2FrNV0:hover .content-3JzEqq {
-   background: linear-gradient(90deg,#473838 85%,rgba(255,255,255,0.4));
+.theme-dark .member-2FrNV0.popout-open .content-3JzEqq, 
+.theme-dark .member-2FrNV0.popout-open:hover, 
+.theme-dark .member-2FrNV0:hover .content-3JzEqq {
+   background: linear-gradient(90deg,#473838 85%,rgba(255,255,255,0)) !important;
 }
-.theme-dark .channel-members .member {
+.theme-dark .members-1bid1J .member {
     padding-top: 28px;
     padding-bottom: 28px;
 }
@@ -1584,10 +1600,10 @@ form,
     border: 2px solid rgba(255,255,255,0.5);
 }
 
-.theme-dark .channel-members .member.popout-open .status-online, .theme-dark .channel-members .member:hover .status-online {
+.theme-dark .members-1bid1J .member.popout-open .status-online, .theme-dark .members-1bid1J .member:hover .status-online {
     border: 2px solid rgba(255,255,255,0.5);
 }
-.theme-dark .channel-members .member.popout-open .status-idle, .theme-dark .channel-members .member:hover .status-idle {
+.theme-dark .members-1bid1J .member.popout-open .status-idle, .theme-dark .members-1bid1J .member:hover .status-idle {
     border: 2px solid rgba(0,0,0,0.5);
 }
 
@@ -1600,9 +1616,11 @@ form,
     height: 40px;
     background-size: cover;
 }
-.theme-brand .iconForeground-1U-F96 {
+.theme-brand .iconForeground-1U-F96,
+.theme-dark .activityIconForeground-1o4t0w {
     fill: white;
 }
+
 .marginLeft4-3RAvyQ {
     color: white;
 }
@@ -1642,10 +1660,10 @@ form,
 .theme-dark .avatarStatus-3VdB8Y {
     display: none;
 }
- .theme-dark .channel-members .member:hover .status-idle{
+ .theme-dark .members-1bid1J .member:hover .status-idle{
     border: 2px solid rgba(0,0,0,0.5) !important;
 }
- .theme-dark .channel-members .member:hover .status-dnd{
+ .theme-dark .members-1bid1J .member:hover .status-dnd{
     border: 2px solid rgba(0,0,0,0.5);
 }
 .theme-brand .contentTitle-sL6DrN strong,.marginLeft8-34JoM2 {
