--- a/MountainDew.theme.css
+++ b/MountainDew.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"MountainDew","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"2"}*//{}
+//META{"name":"MountainDew","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"2.1"}*//{}
 /* Backgrounds */
 .app {
 	background-image: url("https://images6.alphacoders.com/631/631863.jpg");
@@ -35,7 +35,7 @@
    background: rgba(1, 71, 19,0.5);
 }
 /* Role Name List Title */
-.theme-dark .channel-members h2 {
+.theme-dark .membersGroup-3_dP5E {
 	color: rgb(231,231,231) !important;
 	font-weight: bold;
 	background: #0e5403;
@@ -45,15 +45,39 @@
     padding-right: 13px;
     text-shadow: 1px 1px 5px #000, 1px 1px 5px #000;
 }
-.channel-members .member:hover {
+.members-1bid1J .member:hover {
     background: rgba(87,255,72, 0.17) !important;
 }
-.theme-dark .channel-members, .channel-members-wrap>div {
+.theme-dark .members-1bid1J, .members-1bid1J-wrap>div {
     background: rgba(14,84,3,0.2) !important;
 }
 /* Some Message Stuff */
 .header, .messages-popout, .message-group {
     margin-bottom: 4px;
+}
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover {
+    border: 1px solid green;
+}
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+    background-color: black;
+    border-color: none;
+}
+.messages-popout .message-group .action-buttons {
+    background-color: transparent !important;
+    box-shadow: none !important;
+}
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button {
+    background-color: rgb(14,84,3);
+    color: #e7e7e7;
+}
+.wrapper-2ldvyE {
+    background-color: rgb(14,84,3);
+    border-radius: 50px;
+    color: #e7e7e7;
+}
+.theme-dark .quickswitcher-2NdiGJ {
+    background-color: rgb(14,84,3);
+    color: white;
 }
 .header, .messages-popout, .message-group:hover {
     background-color: rgba(0, 0, 0, 0.6) !important;
@@ -83,7 +107,7 @@
 }
 .chat .jump-to-present-bar button:first-child:after {
   content: "Press That Button to Enjoy a Refreshing Mountain Dew Drink";
-  color: #e7e7e7 ;
+  color: #e7e7e7;
   font-size: 104%;
   margin-left: -171px;
 }
@@ -318,8 +342,14 @@
  .member-roles .name {
 	color: #e7e7e7;
 }
-.bodyTitleIconForeground-itKW-t {
+.bodyTitleIconForeground-itKW-t,
+.theme-dark .activityIconForeground-1o4t0w {
 	fill:  #e7e7e7;
+}
+.theme-dark .popout .messages-popout-wrap {
+    background-color: black;
+    border: none;
+    box-shadow: none;
 }
 .bodyTitle-18hsd9 {
 	color:  #e7e7e7;
@@ -368,7 +398,7 @@
 .theme-dark .protip-q743VF {
    display: none;
 }
-.channel-members-loading { display: none }
+.members-1bid1J-loading { display: none }
 .theme-dark .quickMessage-OCo-Q0 {
   background: black;
   border-color: #147b04;
@@ -866,7 +896,7 @@ background-color: #0e5403;
     font-size: 16px;
     padding: 5px 5px;
 }
-.channel-members .bot-tag {
+.members-1bid1J .bot-tag {
     height: 14px;
     line-height: 15px;
     padding: 2px 4px;
@@ -1085,7 +1115,7 @@ background-color: #0e5403;
   box-shadow: 0px 2px 19px 3px #202020;
 }
 
-.channel-members .member .member-activity {
+.activityText-258pdj {
     color: #25dc09;
     font-size: 11px;
     font-weight: 400;
@@ -1529,31 +1559,31 @@ input[type="checkbox" i][value*="on"] {
    font-family: 'AirMillHouseItalic' !important;
 }
 
-.theme-dark .channel-members .avatar-small .status-online {
+.theme-dark .members-1bid1J .avatar-small .status-online {
     border-color: #2f3136;
     width: 15px;
     height: 15px;
     border-radius: 50%;
 }
-.theme-dark .channel-members .avatar-small .status-idle {
+.theme-dark .members-1bid1J .avatar-small .status-idle {
     border-color: #2f3136;
     width: 15px;
     height: 15px;
     border-radius: 50%;
 }
-.theme-dark .channel-members .avatar-small .status-dnd {
+.theme-dark .members-1bid1J .avatar-small .status-dnd {
     border-color: #2f3136;
     width: 15px;
     height: 15px;
     border-radius: 50%;
 }
-.theme-dark .channel-members .avatar-small .status-streaming {
+.theme-dark .members-1bid1J .avatar-small .status-streaming {
     border-color: #2f3136;
     width: 15px;
     height: 15px;
     border-radius: 50%;
 }
-.theme-dark .channel-members .avatar-small .status-online:before {
+.theme-dark .members-1bid1J .avatar-small .status-online:before {
 	content: "O" !important;
 	margin-left: 2px;
 	position: absolute;
@@ -1563,7 +1593,7 @@ input[type="checkbox" i][value*="on"] {
 	font-family: 'AirMillHouseItalic' !important;
 	color: white;
 }
-.theme-dark .channel-members .avatar-small .status-idle:before {
+.theme-dark .members-1bid1J .avatar-small .status-idle:before {
 	content: "I" !important;
 	margin-left: 5px;
 	position: absolute;
@@ -1573,7 +1603,7 @@ input[type="checkbox" i][value*="on"] {
 	font-family: 'AirMillHouseItalic' !important;
 	color: white;
 }
-.theme-dark .channel-members .avatar-small .status-dnd:before {
+.theme-dark .members-1bid1J .avatar-small .status-dnd:before {
 	content: "D" !important;
 	margin-left: 3px;
 	position: absolute;
@@ -1583,7 +1613,7 @@ input[type="checkbox" i][value*="on"] {
 	font-family: 'AirMillHouseItalic' !important;
 	color: white;
 }
-.theme-dark .channel-members .avatar-small .status-streaming:before {
+.theme-dark .members-1bid1J .avatar-small .status-streaming:before {
 	content: "S" !important;
 	margin-left: 4px;
 	position: absolute;
@@ -1832,17 +1862,17 @@ input[type="checkbox" i][value*="on"] {
 #user-profile-modal .empty {
     background: black;
 }
-.theme-dark .channel-members-loading .background {
+.theme-dark .members-1bid1J-loading .background {
  background-image: linear-gradient(90deg,rgba(47,149,254,0.6),rgba(0, 0, 0, 0));
 }
 [class*="channel-members-loading"][style*="opacity: 1;"]{
     background: red !important;
     opacity: 0.3 !important;
 }
-.channel-members-loading .heading, .channel-members-loading .member {
+.members-1bid1J-loading .heading, .members-1bid1J-loading .member {
    display: none;
 }
-.channel-members-loading .background {
+.members-1bid1J-loading .background {
    animation: flash 5s ease-in-out infinite;
  }
  @keyframes flash {
@@ -2234,7 +2264,7 @@ background: #006622 !important;
 .theme-dark .friends-table, .theme-dark .messages-wrapper {
     background-color: transparent;
 }
-.theme-dark .channel-members {
+.theme-dark .members-1bid1J {
     background-color: transparent;
 }
 .theme-dark .title-qAcLxz {
